fixed book-list height, messed up book spacing, pls fix

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -49,9 +49,9 @@ body {
   gap: 10px;
   padding: 10px;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  max-height: 100vh;
-  overflow-y: scroll;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  height: 100%;
+  overflow-y: auto;
 }
 
 .my-book {
@@ -62,6 +62,7 @@ body {
   border: 1px solid #ccc;
   padding: 10px;
   text-align: center;
+  margin: auto;
 }
 
 .my-book-cover {
